[gd_scene load_steps=31 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=8]
[ext_resource path="res://CanvasLayer.gd" type="Script" id=9]
[ext_resource path="res://Montserrat-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Gate_01.tscn" type="PackedScene" id=14]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "transform"
tracks/0/path = NodePath("cam_track")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "value"
tracks/1/path = NodePath("cam_track:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 270, 0 ), Vector3( 0, 360, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.203922 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="DynamicFont" id=13]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=14]
size = 19
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=21]
size = 13
font_data = ExtResource( 11 )

[sub_resource type="ProceduralSky" id=22]

[sub_resource type="Environment" id=23]
background_mode = 2
background_sky = SubResource( 22 )
fog_enabled = true
fog_color = Color( 0.423529, 0.541176, 0.603922, 1 )
fog_sun_color = Color( 0.929412, 0.784314, 0.47451, 1 )
fog_sun_amount = 0.2
fog_depth_begin = 1.0
fog_depth_end = 29.0
fog_depth_curve = 1.31951
fog_transmit_curve = 1.07177
fog_height_enabled = true
fog_height_min = 0.0
fog_height_max = 841.3
dof_blur_far_distance = 4.96
dof_blur_far_transition = 5.75
dof_blur_far_amount = 0.41

[sub_resource type="Animation" id=24]
tracks/0/type = "bezier"
tracks/0/path = NodePath("cam_track/cam_vertical:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("cam_track/cam_vertical:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("cam_track/cam_vertical:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( -90, -0.25, 0, 0.25, 0, 45, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="SphereMesh" id=25]
flip_faces = true

[sub_resource type="SpatialMaterial" id=26]

[node name="Spatial" type="Spatial"]
script = ExtResource( 8 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.79541, 0.606072, 0, -0.606072, 0.79541, 0, 3.93294, 5.77091 )
visible = false

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0.921766, -0.520373, 0.023845 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/scene_rot = SubResource( 3 )

[node name="cam_track" type="Spatial" parent="."]

[node name="cam_vertical" type="Spatial" parent="cam_track"]
transform = Transform( 0.92388, 0.382684, 0, -0.382684, 0.92388, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="cam_track/cam_vertical"]
transform = Transform( -1.62921e-07, -0.26128, 0.965263, 0, 0.965263, 0.26128, -1, 4.25678e-08, -1.57261e-07, 6.185, 3.587, -0.04 )
fov = 68.2
far = 126.3

[node name="Node" type="Node" parent="cam_track/cam_vertical/Camera"]

[node name="CanvasLayer" type="CanvasLayer" parent="cam_track/cam_vertical/Camera/Node"]
follow_viewport_enable = true
script = ExtResource( 9 )

[node name="Card_Panel" type="Panel" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer"]
margin_left = 56.0
margin_top = 962.0
margin_right = 406.0
margin_bottom = 1035.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_Button" type="Button" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel"]
margin_left = 19.5807
margin_top = 19.4481
margin_right = 96.5805
margin_bottom = 59.4501
custom_fonts/font = SubResource( 5 )
text = "Switch"
clip_text = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_HSlider" type="HSlider" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel"]
margin_left = 114.692
margin_top = 39.0
margin_right = 338.692
margin_bottom = 62.0
value = 50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_Label" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel"]
margin_left = 118.853
margin_top = 10.478
margin_right = 229.853
margin_bottom = 34.478
custom_fonts/font = SubResource( 6 )
text = "Card Offset: 50"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card_CheckBox" type="CheckBox" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel"]
margin_left = 320.0
margin_top = 4.21057
margin_right = 344.0
margin_bottom = 28.2106
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water_Panel2" type="Panel" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer"]
margin_left = 436.0
margin_top = 962.857
margin_right = 786.0
margin_bottom = 1035.86
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water_CheckBox" type="CheckBox" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2"]
margin_left = 9.43115
margin_top = 10.2885
margin_right = 33.4312
margin_bottom = 34.2885
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2/Water_CheckBox"]
margin_left = 24.864
margin_top = -0.857361
margin_right = 110.864
margin_bottom = 23.1426
custom_fonts/font = SubResource( 7 )
text = "Turbidity: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water_HSlider" type="HSlider" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2"]
margin_left = 13.718
margin_top = 39.0
margin_right = 237.718
margin_bottom = 62.0
min_value = 1.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Water_ColorPickerButton" type="ColorPickerButton" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2"]
margin_left = 248.0
margin_top = 37.0
margin_right = 341.0
margin_bottom = 63.0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 12 )
color = Color( 0.423529, 0.541176, 0.603922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2/Water_ColorPickerButton"]
margin_left = 2.57208
margin_top = -26.5786
margin_right = 42.5721
margin_bottom = -2.57861
custom_fonts/font = SubResource( 13 )
text = "Tint"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color_Panel" type="Panel" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer"]
margin_left = 816.0
margin_top = 962.0
margin_right = 1166.0
margin_bottom = 1035.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel"]
margin_left = 14.4045
margin_top = 7.75623
margin_right = 59.4045
margin_bottom = 31.7562
custom_fonts/font = SubResource( 14 )
text = "Gate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel"]
margin_left = 123.428
margin_top = 8.86403
margin_right = 168.428
margin_bottom = 32.864
custom_fonts/font = SubResource( 14 )
text = "Controls: Arrow keys
 to position the Gate"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gate1_ColorPickerButton" type="ColorPickerButton" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel"]
margin_left = 14.0
margin_top = 37.0
margin_right = 56.0
margin_bottom = 63.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gate2_ColorPickerButton" type="ColorPickerButton" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel"]
margin_left = 65.922
margin_top = 37.0
margin_right = 107.922
margin_bottom = 63.0
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 19 )
color = Color( 1, 0.666667, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shot_Panel" type="Panel" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer"]
margin_left = 1196.0
margin_top = 962.0
margin_right = 1546.0
margin_bottom = 1035.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Shot_Panel"]
margin_left = 230.0
margin_top = 1.0
margin_right = 345.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 20 )
text = "Hide UI: H
Screenshot: J"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="cam_track/cam_vertical/Camera/Node/CanvasLayer/Shot_Panel"]
margin_left = 4.0
margin_top = 3.0
margin_right = 223.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 21 )
text = "/path"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="cam_track/cam_vertical/Camera"]
environment = SubResource( 23 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/scene_vert = SubResource( 24 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0 )
mesh = SubResource( 25 )
material/0 = SubResource( 26 )

[node name="Gate_02" parent="." instance=ExtResource( 14 )]
transform = Transform( 0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0.873, -1.601 )
[connection signal="pressed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel/Card_Button" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Button_pressed"]
[connection signal="value_changed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel/Card_HSlider" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Card_HSlider_value_changed"]
[connection signal="toggled" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Card_Panel/Card_CheckBox" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Card_CheckBox_toggled"]
[connection signal="toggled" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2/Water_CheckBox" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Water_CheckBox_toggled"]
[connection signal="value_changed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2/Water_HSlider" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Water_HSlider_value_changed"]
[connection signal="color_changed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Water_Panel2/Water_ColorPickerButton" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Water_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel/Gate1_ColorPickerButton" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Gate1_ColorPickerButton_color_changed"]
[connection signal="color_changed" from="cam_track/cam_vertical/Camera/Node/CanvasLayer/Color_Panel/Gate2_ColorPickerButton" to="cam_track/cam_vertical/Camera/Node/CanvasLayer" method="_on_Gate2_ColorPickerButton_color_changed"]
